--- a/Ticker-Tape.html
+++ b/Ticker-Tape.html
@@ -18,7 +18,7 @@
       "proName": "BINANCE:IOTAUSD"
     }
   ],
-  "colorTheme": "dark",
+  "colorTheme": "light",
   "isTransparent": false,
   "displayMode": "adaptive",
   "locale": "en"
